# bored

./: .gitignore  AGENTS.md  icon.svg.import  node_2d.tscn  project.godot
client/: project.godot
client/assets/: icon.svg.import
client/scenes/: main.tscn
client/scripts/: README.md  main.gd  main.gd.uid  network_client.gd  network_client.gd.uid
docs/: README.md  networking-roadmap.md  project-plan.md
server/: CMakeLists.txt  CMakePresets.json  README.md
server/include/bored/: fixed_tick_clock.h  protocol.h  udp_socket.h
server/src/: fixed_tick_clock.cpp  main.cpp  protocol.cpp  udp_socket.cpp
server/tests/: fixed_tick_clock_test.cpp  protocol_test.cpp
shared/protocol/: README.md  protocol.md
shared/protocol/test_vectors/: README.md  v1_packets.txt
tools/: README.md
